fixed h1 titles on ie7/8

--- a/public/stylesheets/menu.css
+++ b/public/stylesheets/menu.css
@@ -23,8 +23,8 @@
 	margin-top:6px;
 	border:none;
 	height:20px;
-	margin-right:70px;
-	width:70px;
+	margin-right:40px;
+	width:100px;
 }
 #automation {width:120px; margin-right:50px;}
 .menu_header li:hover {
@@ -33,6 +33,7 @@
 }
 
 .menu_header li a {
+		width:100px;
 	color: #FFF;
 	outline:0;
 	text-decoration:none;
